Add notice when first visit page

--- a/學生版/index.html
+++ b/學生版/index.html
@@ -76,7 +76,15 @@
                 <div
                   class="scienceLiteracy-history-row"
                   id="scienceLiteracy-history-row"
-                ></div>
+                >
+                  <div class="scienceLiteracy-history-row">
+                    <div class="scienceLiteracy-history-row-title">
+                      <h4>
+                        <font color="#E00"> 請選取篩選條件後查詢 </font>
+                      </h4>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
             <div id="content2">
