Add custom modal  box js and fix some box style

--- a/學生版/index.html
+++ b/學生版/index.html
@@ -2368,6 +2368,7 @@
 
     <script src="./js/api.js"></script>
     <script src="./js/index.js"></script>
+    <script src="/js/customModalBox.js"></script>
     <script src="./js/downloadModal.js"></script>
   </body>
 </html>
