Add topic status modal data tag to all radar element

--- a/學生版/index.html
+++ b/學生版/index.html
@@ -431,14 +431,20 @@
               <h3 class="card-title">B 溝通互動</h3>
               <div class="card-info">
                 <span>
-                  已做答題數：<span class="green-text"
+                  已做答題數：<span
+                    class="green-text"
+                    data-is-answer="true"
+                    data-category="B"
                     ><%= data.scienceLiteracyData["B"].answered %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i>
                   </span>
                 </span>
                 <span>
-                  未作答題數：<span class="green-text"
+                  未作答題數：<span
+                    class="green-text"
+                    data-is-answer="false"
+                    data-category="B"
                     ><%= data.scienceLiteracyData["B"].notanswer %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i
@@ -473,14 +479,20 @@
               <h3 class="card-title">C 社會參與</h3>
               <div class="card-info">
                 <span>
-                  已做答題數：<span class="green-text"
+                  已做答題數：<span
+                    class="green-text"
+                    data-is-answer="true"
+                    data-category="C"
                     ><%= data.scienceLiteracyData["C"].answered %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i>
                   </span>
                 </span>
                 <span>
-                  未作答題數：<span class="green-text"
+                  未作答題數：<span
+                    class="green-text"
+                    data-is-answer="false"
+                    data-category="C"
                     ><%= data.scienceLiteracyData["C"].notanswer %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i
@@ -576,14 +588,20 @@
               <h3 class="card-title">A2 系統思考與解決問題</h3>
               <div class="card-info">
                 <span>
-                  已做答題數：<span class="green-text"
+                  已做答題數：<span
+                    class="green-text"
+                    data-is-answer="true"
+                    data-category="A2"
                     ><%= data.scienceLiteracyData["A2"].answered %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i>
                   </span>
                 </span>
                 <span>
-                  未作答題數：<span class="green-text"
+                  未作答題數：<span
+                    class="green-text"
+                    data-is-answer="false"
+                    data-category="A2"
                     ><%= data.scienceLiteracyData["A2"].notanswer %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i
@@ -622,14 +640,20 @@
               <h3 class="card-title">A3 規劃執行與創新應變</h3>
               <div class="card-info">
                 <span>
-                  已做答題數：<span class="green-text"
+                  已做答題數：<span
+                    class="green-text"
+                    data-is-answer="true"
+                    data-category="A3"
                     ><%= data.scienceLiteracyData["A3"].answered %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i>
                   </span>
                 </span>
                 <span>
-                  未作答題數：<span class="green-text"
+                  未作答題數：<span
+                    class="green-text"
+                    data-is-answer="false"
+                    data-category="A3"
                     ><%= data.scienceLiteracyData["A3"].notanswer %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i
@@ -677,14 +701,20 @@
               <h3 class="card-title">B1 符號運用與溝通表達</h3>
               <div class="card-info">
                 <span>
-                  已做答題數：<span class="green-text"
+                  已做答題數：<span
+                    class="green-text"
+                    data-is-answer="true"
+                    data-category="B1"
                     ><%= data.scienceLiteracyData["B1"].answered %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i>
                   </span>
                 </span>
                 <span>
-                  未作答題數：<span class="green-text"
+                  未作答題數：<span
+                    class="green-text"
+                    data-is-answer="false"
+                    data-category="B1"
                     ><%= data.scienceLiteracyData["B1"].notanswer %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i
@@ -723,14 +753,20 @@
               <h3 class="card-title">B2 科技資訊與媒體素養</h3>
               <div class="card-info">
                 <span>
-                  已做答題數：<span class="green-text"
+                  已做答題數：<span
+                    class="green-text"
+                    data-is-answer="true"
+                    data-category="B2"
                     ><%= data.scienceLiteracyData["B2"].answered %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i>
                   </span>
                 </span>
                 <span>
-                  未作答題數：<span class="green-text"
+                  未作答題數：<span
+                    class="green-text"
+                    data-is-answer="false"
+                    data-category="B2"
                     ><%= data.scienceLiteracyData["B2"].notanswer %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i
@@ -769,14 +805,20 @@
               <h3 class="card-title">B3 藝術涵養與美感素養</h3>
               <div class="card-info">
                 <span>
-                  已做答題數：<span class="green-text"
+                  已做答題數：<span
+                    class="green-text"
+                    data-is-answer="true"
+                    data-category="B3"
                     ><%= data.scienceLiteracyData["B3"].answered %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i>
                   </span>
                 </span>
                 <span>
-                  未作答題數：<span class="green-text"
+                  未作答題數：<span
+                    class="green-text"
+                    data-is-answer="false"
+                    data-category="B3"
                     ><%= data.scienceLiteracyData["B3"].notanswer %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i
@@ -825,14 +867,20 @@
               <h3 class="card-title">C1 道德實踐與公民意識</h3>
               <div class="card-info">
                 <span>
-                  已做答題數：<span class="green-text"
+                  已做答題數：<span
+                    class="green-text"
+                    data-is-answer="true"
+                    data-category="C1"
                     ><%= data.scienceLiteracyData["C1"].answered %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i>
                   </span>
                 </span>
                 <span>
-                  未作答題數：<span class="green-text"
+                  未作答題數：<span
+                    class="green-text"
+                    data-is-answer="false"
+                    data-category="C1"
                     ><%= data.scienceLiteracyData["C1"].notanswer %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i
@@ -871,14 +919,20 @@
               <h3 class="card-title">C2 人際關係與團隊合作</h3>
               <div class="card-info">
                 <span>
-                  已做答題數：<span class="green-text"
+                  已做答題數：<span
+                    class="green-text"
+                    data-is-answer="true"
+                    data-category="C2"
                     ><%= data.scienceLiteracyData["C2"].answered %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i>
                   </span>
                 </span>
                 <span>
-                  未作答題數：<span class="green-text"
+                  未作答題數：<span
+                    class="green-text"
+                    data-is-answer="false"
+                    data-category="C2"
                     ><%= data.scienceLiteracyData["C2"].notanswer %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i
@@ -917,14 +971,20 @@
               <h3 class="card-title">C3 多元文化與國際理解</h3>
               <div class="card-info">
                 <span>
-                  已做答題數：<span class="green-text"
+                  已做答題數：<span
+                    class="green-text"
+                    data-is-answer="true"
+                    data-category="C3"
                     ><%= data.scienceLiteracyData["C3"].answered %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i>
                   </span>
                 </span>
                 <span>
-                  未作答題數：<span class="green-text"
+                  未作答題數：<span
+                    class="green-text"
+                    data-is-answer="false"
+                    data-category="C3"
                     ><%= data.scienceLiteracyData["C3"].notanswer %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i
@@ -974,14 +1034,20 @@
               <h3 class="card-title">發現問題</h3>
               <div class="card-info">
                 <span>
-                  已做答題數：<span class="green-text"
+                  已做答題數：<span
+                    class="green-text"
+                    data-is-answer="true"
+                    data-category="NA-A"
                     ><%= data.scienceLiteracyData["NA-A"].answered %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i>
                   </span>
                 </span>
                 <span>
-                  未作答題數：<span class="green-text"
+                  未作答題數：<span
+                    class="green-text"
+                    data-is-answer="false"
+                    data-category="NA-A"
                     ><%= data.scienceLiteracyData["NA-A"].notanswer %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i
@@ -1020,14 +1086,20 @@
               <h3 class="card-title">規劃與研究</h3>
               <div class="card-info">
                 <span>
-                  已做答題數：<span class="green-text"
+                  已做答題數：<span
+                    class="green-text"
+                    data-is-answer="true"
+                    data-category="NA-B"
                     ><%= data.scienceLiteracyData["NA-B"].answered %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i>
                   </span>
                 </span>
                 <span>
-                  未作答題數：<span class="green-text"
+                  未作答題數：<span
+                    class="green-text"
+                    data-is-answer="false"
+                    data-category="NA-B"
                     ><%= data.scienceLiteracyData["NA-B"].notanswer %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i
@@ -1066,14 +1138,20 @@
               <h3 class="card-title">論證與建模</h3>
               <div class="card-info">
                 <span>
-                  已做答題數：<span class="green-text"
+                  已做答題數：<span
+                    class="green-text"
+                    data-is-answer="true"
+                    data-category="NA-C"
                     ><%= data.scienceLiteracyData["NA-C"].answered %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i>
                   </span>
                 </span>
                 <span>
-                  未作答題數：<span class="green-text"
+                  未作答題數：<span
+                    class="green-text"
+                    data-is-answer="false"
+                    data-category="NA-C"
                     ><%= data.scienceLiteracyData["NA-C"].notanswer %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i
@@ -1112,14 +1190,20 @@
               <h3 class="card-title">表達與分享</h3>
               <div class="card-info">
                 <span>
-                  已做答題數：<span class="green-text"
+                  已做答題數：<span
+                    class="green-text"
+                    data-is-answer="true"
+                    data-category="NA-D"
                     ><%= data.scienceLiteracyData["NA-D"].answered %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i>
                   </span>
                 </span>
                 <span>
-                  未作答題數：<span class="green-text"
+                  未作答題數：<span
+                    class="green-text"
+                    data-is-answer="false"
+                    data-category="NA-D"
                     ><%= data.scienceLiteracyData["NA-D"].notanswer %>題<i
                       class="fa-solid fa-hand-point-left"
                     ></i
@@ -1160,7 +1244,8 @@
       <!-- <hr class="mb-3" /> -->
       <div class="scienceLiteracy_topic_status_modal">
         <h4 class="topic_status_title mb-3">
-          <font color="#0BA44A">A自主行動</font> 已作答題目
+          <font color="#0BA44A"><%= data.category %></font>
+          <% if(data.isAnswer){ %> 已作答題目 <% }else{ %> 尚未作答題目 <% } %>
         </h4>
         <div class="literacy mb-3">
           <ul>
