Finish semester, class,student filter

--- a/教師版/index.html
+++ b/教師版/index.html
@@ -34,6 +34,28 @@
                 </div>
                 <div class="contant contant-custom">
                   <div class="selector-group">
+                    <h4>學期:</h4>
+                    <div class="selector" id="semester-selector">
+                      <span class="valueShow" data-value>請選擇</span>
+                      <ul></ul>
+                    </div>
+                  </div>
+                  <div class="selector-group">
+                    <h4>班級:</h4>
+                    <div class="selector" id="class-selector">
+                      <span class="valueShow" data-value>請選擇</span>
+                      <ul></ul>
+                    </div>
+                  </div>
+                  <div class="selector-group">
+                    <h4>學生:</h4>
+                    <div class="selector" id="student-selector">
+                      <span class="valueShow" data-value>請選擇</span>
+                      <ul></ul>
+                    </div>
+                  </div>
+                  <hr />
+                  <div class="selector-group">
                     <h4>核心素養:</h4>
                     <div class="selector" id="coreliteracy-selector">
                       <span class="valueShow" data-value>請選擇</span>
@@ -88,6 +110,34 @@
               </div>
             </div>
             <div id="content2">
+              <div class="contant contant-collapse active">
+                <h3>篩選器</h3>
+                <i class="fa-solid fa-caret-right"></i>
+              </div>
+              <div class="contant contant-custom radar-filter">
+                <div class="selector-group">
+                  <h4>學期:</h4>
+                  <div class="selector" id="radar-semester-selector">
+                    <span class="valueShow" data-value>請選擇</span>
+                    <ul></ul>
+                  </div>
+                </div>
+                <div class="selector-group">
+                  <h4>班級:</h4>
+                  <div class="selector" id="radar-class-selector">
+                    <span class="valueShow" data-value>請選擇</span>
+                    <ul></ul>
+                  </div>
+                </div>
+                <div class="selector-group">
+                  <h4>學生:</h4>
+                  <div class="selector" id="radar-student-selector">
+                    <span class="valueShow" data-value>請選擇</span>
+                    <ul></ul>
+                  </div>
+                </div>
+                <button class="btn confirmBtn search-btn">查詢</button>
+              </div>
               <div id="scienceLiteracyStatistics_container"></div>
             </div>
           </div>
