Use after to decorate row first background color

--- a/學生版/index.html
+++ b/學生版/index.html
@@ -188,8 +188,8 @@
               </button>
               <h4 class="md-d-none">問題<%= j + 1 %></h4>
               <% }else{ %>
-              <span class="sm-d-none"></span>
-              <span class="md-d-none"></span>
+              <span class="sm-d-none">&nbsp;</span>
+              <span class="md-d-none">&nbsp;</span>
               <% } %> <% if(data[i].examlist[k].anslist[j].iscorrect == "1") {
               %>
               <p><%= data[i].examlist[k].anslist[j].answer %></p>
