Finish filter js

--- a/教師版/index.html
+++ b/教師版/index.html
@@ -41,6 +41,13 @@
                     </div>
                   </div>
                   <div class="selector-group">
+                    <h4>班級類型:</h4>
+                    <div class="selector" id="classtype-selector">
+                      <span class="valueShow" data-value>請選擇</span>
+                      <ul></ul>
+                    </div>
+                  </div>
+                  <div class="selector-group">
                     <h4>班級:</h4>
                     <div class="selector" id="class-selector">
                       <span class="valueShow" data-value>請選擇</span>
@@ -118,6 +125,13 @@
                 <div class="selector-group">
                   <h4>學期:</h4>
                   <div class="selector" id="radar-semester-selector">
+                    <span class="valueShow" data-value>請選擇</span>
+                    <ul></ul>
+                  </div>
+                </div>
+                <div class="selector-group">
+                  <h4>班級類型:</h4>
+                  <div class="selector" id="radar-classtype-selector">
                     <span class="valueShow" data-value>請選擇</span>
                     <ul></ul>
                   </div>
@@ -2509,5 +2523,6 @@
     <script src="./js/api.js"></script>
     <script src="./js/index.js"></script>
     <script src="./js/downloadModal.js"></script>
+    <script src="./js/filter.js"></script>
   </body>
 </html>
