Add filter guard and finish radar chart

--- a/教師版/index.html
+++ b/教師版/index.html
@@ -88,7 +88,9 @@
                       <i class="fa-solid fa-magnifying-glass"></i>
                     </div>
                   </div>
-                  <button class="btn confirmBtn search-btn">查詢</button>
+                  <button class="btn confirmBtn search-btn" id="search">
+                    查詢
+                  </button>
                 </div>
                 <button
                   class="btn confirmBtn d-block w-100 m-0 mt-3"
@@ -150,7 +152,9 @@
                     <ul></ul>
                   </div>
                 </div>
-                <button class="btn confirmBtn search-btn">查詢</button>
+                <button class="btn confirmBtn search-btn" id="radar-search">
+                  查詢
+                </button>
               </div>
               <div id="scienceLiteracyStatistics_container"></div>
             </div>
@@ -429,7 +433,7 @@
             <span class="green-text"
               ><%= data.chtclass %> <%= data.name %></span
             >
-            同學目前為止的作答結果，你的核心素養結果如下：
+            同學目前為止的作答結果，核心素養結果如下：
           </h3>
         </div>
         <h3 class="big-title">三大核心面向雷達圖</h3>
